--- a/entrepreneure-crossing-digital-garden.html
+++ b/entrepreneure-crossing-digital-garden.html
@@ -1,3 +1,1 @@
-<html>
-  <iframe name="Ausha Podcast Player" frameborder="0" loading="lazy" id="ausha-U9xC" height="220" style="border: none; width:100%; height:220px" src="https://player.ausha.co/?showId=egjA9Tp0Zjp5&color=%230081af&v=3&playerId=ausha-U9xC"></iframe><script src="https://player.ausha.co/ausha-player.js"></script>
-  </html>
+<iframe name="Ausha Podcast Player" frameborder="0" loading="lazy" id="ausha-l2Tz" height="220" style="border: none; width:100%; height:220px" src="https://player.ausha.co/?showId=egjA9Tp0Zjp5&color=%230081af&podcastId=oRROAu7GKZd7&v=3&playerId=ausha-l2Tz"></iframe><script src="https://player.ausha.co/ausha-player.js"></script>
